--- a/timesreviews.ipynb
+++ b/timesreviews.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.6.9 64-bit ('learn-env': conda)",
+   "display_name": "Python 3.6.9 64-bit",
    "metadata": {
     "interpreter": {
      "hash": "9b546e02e2ae7bc31ff393e72c59458abdd61657dbde44a42856f782e397745f"
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,6 +449,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stopwords = [' review', 'pete wells', 'restaurant', 'on the lower east side']\n",
+    "\n",
+    "def remove_stopwords(column, stopwords):\n",
+    "    ''''''\n",
+    "    column.apply(lambda x: [item for item in x if item not in stopwords])\n",
+    "    return column\n",
+    "\n",
+    "df['restaurants'] = remove_stopwords(df['restaurants'], stopwords)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
@@ -495,16 +511,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stars = []\n",
-    "for i in df.urls:\n",
-    "    page = requests.get(i)\n",
-    "    soup = BeautifulSoup(page.content, 'html.parser')\n",
-    "    l = soup.find(class_=\"css-z4hz5\")\n",
-    "    if l:\n",
-    "        stars.append(l.text)\n",
-    "    else:\n",
-    "        stars.append(np.NaN)\n",
-    "    "
+    "def get_stars(list_of_urls):\n",
+    "    stars = []\n",
+    "    for i in list_of_urls:\n",
+    "        page = requests.get(i)\n",
+    "        soup = BeautifulSoup(page.content, 'html.parser')\n",
+    "        l = soup.find(class_=\"css-z4hz5\")\n",
+    "        if l:\n",
+    "            stars.append(l.text)\n",
+    "        else:\n",
+    "            stars.append(np.NaN)\n",
+    "    return stars"
    ]
   },
   {
@@ -513,7 +530,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['stars'] = stars"
+    "df['stars'] = get_stars(df.urls)"
    ]
   },
   {
@@ -535,6 +552,19 @@
     "df = df[~df.restaurants.str.contains('rest')]\n",
     "df = df[~df.restaurants.str.contains('brief')]\n",
     "df = df[~df.restaurants.str.contains('hungry city')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def drop_rows(stopwords, dataframe, dataframe_column):\n",
+    "    ''''''\n",
+    "    for i in stopwords:\n",
+    "        dataframe = dataframe[~dataframe[dataframe_column].str.contains(i)]\n",
+    "    return dataframe"
    ]
   },
   {
@@ -791,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [],
    "source": [
